# ipbr-rank

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  refresh.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs  triage.rs
crates/cli/tests/: golden.rs
crates/core/: Cargo.toml
crates/core/src/: aggregate.rs  alias.rs  coefficients.rs  ingest.rs  lib.rs  model.rs  normalize.rs  required_aliases.rs  score.rs  scoreboard.rs  synthesize.rs
crates/core/tests/: alias_lookup_smoke.rs  properties.rs
crates/render/: Cargo.toml
crates/render/src/: lib.rs  toml_output.rs
crates/render/src/site/: about.rs  app.js  index.rs  mod.rs  radar.rs  scripts.rs  theme.css  theme.rs
crates/render/tests/: schema_roundtrip.rs  site.rs  toml_output.rs
crates/sources/: Cargo.toml
crates/sources/src/: aistupidlevel.rs  arc_agi.rs  artificial_analysis.rs  gso.rs  http.rs  lib.rs  livecodebench.rs  lmarena.rs  mcp_atlas.rs  openrouter.rs  overrides.rs  registry.rs  sonar.rs  swebench.rs  swebench_pro.rs  swerebench.rs  terminal_bench.rs
crates/sources/tests/: contracts.rs
data/: coefficients.toml  required_aliases.toml  score_overrides.toml  synthesis_aliases.toml
data/fixtures/: aistupidlevel_dashboard.json  arc_agi.json  artificial_analysis_llms.json  gso.json  lmarena_overall.json  mcp_atlas.html  openrouter_models.json  sonar.json  swebench_pro.html  terminal_bench.html
docs/: adding-a-source.md  methodology.md  output-schema.md  sources.md
scripts/: check-docs.sh  prefetch.py  refresh.sh
tests/golden/: scoreboard.toml
