[package]
name = "ipbr-rank-core"
version.workspace = true
edition.workspace = true

[lib]
name = "ipbr_core"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
regex = "1"
thiserror = "2"
unicode-normalization = "0.1"

[features]
router = []

[dev-dependencies]
proptest = "1"
