[package]
name = "ipbr-rank-sources"
version.workspace = true
edition.workspace = true

[lib]
name = "ipbr_sources"

[dependencies]
ipbr-core = { package = "ipbr-rank-core", path = "../core" }
tokio = { version = "1", features = ["rt", "macros"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
async-trait = "0.1"
scraper = "0.22"
toml = "0.8"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tempfile = "3"
